[package]
name = "vulkano-play"
version = "0.1.0"
authors = ["Ryan Barry <ryan@nuclearice.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.19"
vulkano-shaders = "0.18"
sdl2 = { version = "0.34", default-features = false }
